--- a/git-search/package.json
+++ b/git-search/package.json
@@ -10,7 +10,7 @@
     "redux": "^3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node src/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
